# agoge

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
agents/: AGENTS.template.md  README.md  business-analyst.md
artifacts/: README.md  architecture-decisions.md  architecture-handoff.md  architecture-review.md  artifact.template.md  backlog-prioritization.md  business-objectives.md  code-review-scope.md  controls-and-evidence-matrix.md  definition-of-done.md  evidence-review.md  implementation-evidence.md  implementation-handoff.md  implementation-package-handoff.md  implementation-plan-review.md  implementation-readiness-review.md  implementation-record.md  implementation-strategy.md  process-analysis.md  product-decision-review.md  product-direction.md  product-handoff.md  release-candidate-summary.md  release-handoff.md  release-readiness-decision.md  requirements-handoff.md  requirements-specification.md  review-decision.md  review-findings.md  review-handoff.md  role-definition-brief.md  role-package-handoff.md  role-package-review.md  role-support-system.md  rollout-and-operations-notes.md  scenario-definition.md  scenario-handoff.md  scenario-integration-map.md  scenario-review.md  security-compliance-handoff.md  (+7 more)
checks/: README.md  architecture-decisions.check.md  (+67 more)
crates/orpheum-cli/: Cargo.toml
crates/orpheum-cli/src/: main.rs
crates/orpheum-cli/tests/: cli.rs
crates/orpheum-core/: Cargo.toml
crates/orpheum-core/src/: catalog.rs  checks.rs  doctor.rs  error.rs  frontmatter.rs  init.rs  lib.rs  session.rs  session_fs.rs  session_types.rs
(+120 files in other folders)
