[package]
name = "orpheum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
orpheum-core = { path = "../orpheum-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
