[package]
name = "orpheum-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
